# Coca-Cola-Stock-Price

./: Makefile  README.md  pyproject.toml
datasets/interim/: coca_cola_ohlc_cleaned.csv
datasets/raw/: Coca_Cola_historical_data.csv
docs/: data_dictionary.md  mkdocs.yml
docs/docs/: index.md
notebooks/: 01_EDA_Data_Acquisition.ipynb  02_Data_Preprocessing.ipynb  99_generate_data_dict.ipynb
