[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "stock_predictor"
version = "0.0.1"
description = "Time-Series modeling using the comprehensive, up-to-date historical stock performance of The Coca-Cola Company (KO), one of the most globally popular beverage brands."
authors = [
  { name = "Shahriar Rahman" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["stock_predictor"]
force_sort_within_sections = true


